--- a/home/landing_page_admin.html
+++ b/home/landing_page_admin.html
@@ -35,7 +35,7 @@
     <!-- logo -->
     <a href="landing_page_user.html" class="navbar-brand extra-hide">BidBay</a>
     <!-- search bar -->
-    <form action="../search.html" method="get" class="" id="search-bar">
+    <form action="../advanced_search.html" method="get" class="" id="search-bar">
         <div class="d-flex">
             <input class="form-control rounded-1" type="search" placeholder="Search" aria-label="Search" id="search-input">
             <select class="form-control rounded-1 col-2 " id="search-categories">
@@ -78,7 +78,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <!-- carousel items here, change <img> <a> and the subtitle <h3> and <p> with appropriate data -->
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="d-block " src="https://placeimg.com/1600/900/tech" alt="First slide">
                     <div class="carousel-caption d-md-block">
                         <h3>Another Newish Item</h3>
@@ -88,7 +88,7 @@
                 </a>
             </div>
             <div class="carousel-item">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="d-block " src="https://placeimg.com/480/480/arch" alt="Second slide">
                     <div class="carousel-caption d-md-block">
                         <h3>Another Newish Item</h3>
@@ -98,7 +98,7 @@
                 </a>
             </div>
             <div class="carousel-item">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="d-block " src="https://placeimg.com/400/300/arch" alt="Second slide">
                     <div class="carousel-caption d-md-block">
                         <h3>Another Newish Item</h3>
@@ -125,7 +125,7 @@
         <div class="card-columns">
             <!-- reference to auction here -->
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <!-- place auction data here -->
                     <!-- images can be any size -->
                     <img class="card-img-top" src="https://placeimg.com/640/640/tech" alt="auction image">
@@ -141,7 +141,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/960/480/tech" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">Grey Camera</h3>
@@ -154,7 +154,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/480/640/nature" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">Samsung Tablet</h3>
@@ -167,7 +167,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/480/480/arch" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">Pixel X2 4GB</h3>
@@ -180,7 +180,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/480/300/tech" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">toyota motorcycle</h3>
@@ -193,7 +193,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/480/640/arch" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">some other new item</h3>
@@ -215,7 +215,7 @@
         <div class="card-columns">
             <!-- reference to auction here -->
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <!-- place auction data here -->
                     <!-- images can be any size -->
                     <img class="card-img-top" src="https://placeimg.com/640/640/tech" alt="auction image">
@@ -230,7 +230,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/960/480/tech" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">some item</h3>
@@ -243,7 +243,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/480/640/nature" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">some item</h3>
@@ -256,7 +256,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/480/480/arch" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">some item</h3>
@@ -269,7 +269,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/480/300/tech" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">some item</h3>
@@ -282,7 +282,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/480/640/arch" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">some item</h3>
