--- a/profile/profile_asUser.html
+++ b/profile/profile_asUser.html
@@ -27,7 +27,7 @@
     <!-- logo -->
     <a href="../home/landing_page.html" class="navbar-brand extra-hide">BidBay</a>
     <!-- search bar -->
-    <form action="../search.html" method="get" class="" id="search-bar">
+    <form action="../advanced_search.html" method="get" class="" id="search-bar">
         <div class="d-flex">
             <input class="form-control rounded-1" type="search" placeholder="Search" aria-label="Search"
                    id="search-input">
@@ -230,7 +230,7 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="../product/product.html">Computer with Keyboard and Mouse</a>
+                                            <a href="../auction/auction.html">Computer with Keyboard and Mouse</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
@@ -251,7 +251,7 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="../product/product.html">Chinese Shoes</a>
+                                            <a href="../auction/auction.html">Chinese Shoes</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
@@ -274,7 +274,7 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="../product/product.html">2º hand car</a>
+                                            <a href="../auction/auction.html">2º hand car</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
@@ -314,7 +314,7 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="../product/product.html">Steel Lock</a>
+                                            <a href="../auction/auction.html">Steel Lock</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
@@ -338,7 +338,7 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="../product/product.html">Espirit Sunglasses</a>
+                                            <a href="../auction/auction.html">Espirit Sunglasses</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
@@ -371,7 +371,7 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="../product/product.html">Dog Painting</a>
+                                            <a href="../auction/auction.html">Dog Painting</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
@@ -392,7 +392,7 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="../product/product.html">Game of Thrones Books Colection</a>
+                                            <a href="../auction/auction.html">Game of Thrones Books Colection</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
@@ -415,7 +415,7 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="../product/product.html">PS4 with Controloer</a>
+                                            <a href="../auction/auction.html">PS4 with Controloer</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
@@ -445,7 +445,7 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="../product/product.html">Office Desk</a>
+                                            <a href="../auction/auction.html">Office Desk</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
@@ -562,7 +562,7 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="../product/product.html">Dog Collar with Chip</a>
+                                            <a href="../auction/auction.html">Dog Collar with Chip</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
