--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <!-- logo -->
     <a href="index.html" class="navbar-brand">BidBay</a>
     <!-- search bar -->
-    <form action="search.html" method="get" class="px-2" id="search-bar">
+    <form action="advanced_search.html" method="get" class="px-2" id="search-bar">
         <div class="d-flex">
             <input class="form-control rounded-1" type="search" placeholder="Search" aria-label="Search" id="search-input">
             <label for="search-categories"></label><select class="form-control rounded-1 col-2 " id="search-categories">
