--- a/auction/auction_itemOnWatchList.html
+++ b/auction/auction_itemOnWatchList.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Product Page</title>
+    <title>Auction Page</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -25,7 +25,7 @@
 
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/product.css">
+    <link rel="stylesheet" href="../css/auction.css">
 
 
 </head>
@@ -35,7 +35,7 @@
     <!-- logo -->
     <a href="../home/landing_page.html" class="navbar-brand extra-hide">BidBay</a>
     <!-- search bar -->
-    <form action="../search.html" method="get" class="" id="search-bar">
+    <form action="../advanced_search.html" method="get" class="" id="search-bar">
         <div class="d-flex">
             <input class="form-control rounded-1" type="search" placeholder="Search" aria-label="Search"
                    id="search-input">
@@ -74,7 +74,7 @@
     </div>
 </nav>
 
-<div class="container mt-4" id="product-section">
+<div class="container mt-4" id="auction-section">
     <div class="row">
         <div class="col-md-9">
             <div class="row">
@@ -118,7 +118,7 @@
                     <span class="display-4 title">Dell XPS 15</span>
                     <span class="badge badge-primary">Tech</span>
                     <span class="badge badge-info">New</span>
-                    <a href="product_itemOnWatchList.html" class="far fa-star text-warning " aria-hidden="true" title="Add to Watchlist"></a>
+                    <a href="auction.html" class="fas fa-star text-warning " aria-hidden="true" title="Add to Watchlist"></a>
                 </div>
             </div><!-- end row-->
         </div>
@@ -126,11 +126,11 @@
         <div class="col-md-3 ">
             <div class="card text-align-center mobile-text-center" style="width: 20rem;">
                 <img class="card-img-top img-fluid" src="https://ir.ebaystatic.com/pictures/aw/social/avatar.png"
-                     alt="Seller Image">
+                     alt="Auctioneer Image">
 
 
                 <div class="card-block mb-3">
-                    <h4 class="card-title"><a href="../profile/profile.html">Seller Name</a></h4>
+                    <h4 class="card-title"><a href="../profile/profile.html">Auctioneer Name</a></h4>
                     <span class="sr-only">Four out of Five Stars</span>
                     <span class="fas fa-star" aria-hidden="true"></span>
                     <span class="fas fa-star" aria-hidden="true"></span>
@@ -257,7 +257,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" id="review-tab" data-toggle="tab" href="#reviews" role="tab" aria-controls="reviews"
-                   aria-selected="true">Seller Reviews</a>
+                   aria-selected="true">Auctioneer Reviews</a>
             </li>
         </ul>
         <button type="button" class="btn btn-danger btn-sm report" data-toggle="modal" data-target="#exampleModal1">
@@ -332,7 +332,7 @@
                 </dt>
                 <dd class="col-sm-3 bid" id="button-bid">
                     <div class="btn-group">
-                        <a type="button" class="btn" data-toggle="collapse" href="product_asBidder.html" data-target=".collapseAlert" id="button-bid-color">Place
+                        <a type="button" class="btn" data-toggle="collapse" href="auction_asBidder.html" data-target=".collapseAlert" id="button-bid-color">Place
                             Bid</a>
                     </div>
                 </dd>
@@ -412,7 +412,7 @@
                             <span class="fas fa-star" aria-hidden="true"></span>
                             <span class="far fa-star" aria-hidden="true"></span>
                         </div>
-                        <div class="review-block">Excellent seller, quick shipping A++++++</div>
+                        <div class="review-block">Excellent Auctioneer, quick shipping A++++++</div>
                         <a class="badge badge-light report" type="button" data-toggle="modal"
                            href="#exampleModal">
                             Report abuse
