--- a/auction/auction_preview.html
+++ b/auction/auction_preview.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Product Page</title>
+    <title>Auction Page</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -25,18 +25,17 @@
 
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/product.css">
+    <link rel="stylesheet" href="../css/auction.css">
 
 
 </head>
 <body class="website-body">
 <!-- header -->
-<!-- header -->
 <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
     <!-- logo -->
     <a href="../home/landing_page.html" class="navbar-brand extra-hide">BidBay</a>
     <!-- search bar -->
-    <form action="../search.html" method="get" class="" id="search-bar">
+    <form action="../advanced_search.html" method="get" class="" id="search-bar">
         <div class="d-flex">
             <input class="form-control rounded-1" type="search" placeholder="Search" aria-label="Search"
                    id="search-input">
@@ -67,14 +66,15 @@
              role="menu">
             <a class="dropdown-item" href="../sell_page.html">New Auction</a>
             <a class="dropdown-item" href="../profile/profile_asUser.html">Profile</a>
-            <a class="dropdown-item" href="../chat.html" id="messages-dropdown-item">Messages <strong class="got-messages">27</strong>
+            <a class="dropdown-item" href="../chat.html" id="messages-dropdown-item">Messages <strong
+                    class="got-messages">27</strong>
             </a>
             <a class="dropdown-item" href="../home/landing_page.html">Log out</a>
         </div>
     </div>
 </nav>
 
-<div class="container mt-4" id="product-section">
+<div class="container mt-4" id="auction-section">
     <div class="row">
         <div class="col-md-9">
             <div class="row">
@@ -125,9 +125,9 @@
         <div class="col-md-3">
             <div class="card text-align-center mobile-text-center" style="width: 20rem;">
                 <img class="card-img-top img-fluid" src="https://ir.ebaystatic.com/pictures/aw/social/avatar.png"
-                     alt="Seller Image">
+                     alt="Auctioneer Image">
                 <div class="card-block mb-3">
-                    <h4 class="card-title"><a href="../profile/profile.html">Seller Name</a></h4>
+                    <h4 class="card-title"><a href="#">Auctioneer Name</a></h4>
                     <span class="sr-only">Four out of Five Stars</span>
                     <span class="fas fa-star" aria-hidden="true"></span>
                     <span class="fas fa-star" aria-hidden="true"></span>
@@ -137,8 +137,8 @@
                     <span class="badge badge-success">61</span>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, consequatur
                         cupiditate dicta doloremque eligendi</p>
-                    <a href="edit_page_asSeller.html" class="btn btn-primary ">Edit Auction</a>
-                    <a href="#" class="btn btn-danger" data-toggle="modal" data-target="#removeModal">Remove Auction</a>
+                    <a href="auction_asAuctioneer.html" class="btn btn-success ">List Auction</a>
+                    <a href="../sell_page.html" class="btn btn-primary ">Keep Editing</a>
                 </div>
             </div>
         </div>
@@ -160,7 +160,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" id="review-tab" data-toggle="tab" href="#reviews" role="tab" aria-controls="reviews"
-                   aria-selected="true">Seller Reviews</a>
+                   aria-selected="true">Auctioneer Reviews</a>
             </li>
         </ul>
     </nav>
@@ -170,7 +170,6 @@
             <dl class="row">
                 <dt class="col-sm-2 text-align-center mobile-text-center">Current Bid</dt>
                 <dd class="col-sm-10">1600.00€</dd>
-
 
                 <dt class="col-sm-2 text-align-center mobile-text-center">Time Left</dt>
                 <dd class="col-sm-10">4d 05h Wednesday, 9:15PM</dd>
@@ -204,32 +203,7 @@
         </div>
         <div class="tab-pane fade" id="qa" role="tabpanel" aria-labelledby="qa-tab">
             <dl class="row">
-                <dt class="col-sm-4 text-align-center mobile-text-center">Does it come with a fingerprint reader?</dt>
-                <dd class="col-sm-8">Nope :-)</dd>
-
-                <dt class="col-sm-4 text-align-center mobile-text-center">
-                    Are you able to deliver this with portuguese keyboard layout?
-                </dt>
-                <dd class="col-sm-8">Yes we can delivery with Portuguese keyboard layout.</dd>
-                <dt class="col-sm-4 text-align-center mobile-text-center">Does it come with Linux?</dt>
-                <dd class="col-sm-8">
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Place your answer"
-                               aria-label="Place your question" aria-describedby="basic-addon2">
-                        <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" type="button" data-toggle="collapse" data-target="#collapseAlertAnswer">Answer</button>
-                        </div>
-                    </div>
-                </dd>
             </dl>
-            <div class="collapse" id="collapseAlertAnswer">
-                <div class="alert alert-success" role="alert">
-                    <strong>Well done!</strong> You successfully submitted an answer.
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-            </div>
 
         </div>
 
@@ -250,88 +224,13 @@
                             <span class="fas fa-star" aria-hidden="true"></span>
                             <span class="far fa-star" aria-hidden="true"></span>
                         </div>
-                        <div class="review-block">Excellent seller, quick shipping A++++++</div>
-                        <a class="badge badge-light report" type="button" data-toggle="modal"
-                           href="#exampleModal">
-                            Report abuse
-                        </a>
-                    </div>
-                        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
-                             aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Report User Name's Account </h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <form>
-                                            <div class="form-group">
-                                                <div>
-                                                    <h5 style="color:brown"> Motive</h5>
-                                                    <div class="radio">
-                                                        <label><input type="radio"
-                                                                      name="behaviour"> Abusive behaviour </label>
-                                                    </div>
-                                                    <div class="radio">
-                                                        <label><input type="radio" name="content">Inappropriate content in profile </label>
-                                                    </div>
-                                                    <div class="radio">
-                                                        <label><input type="radio"
-                                                                      name="optradio">Didn't receive an item</label>
-                                                    </div>
-                                                </div>
-                                                <label for="recipient-name" class="col-form-label">Other:</label>
-                                                <input type="text" class="form-control" id="recipient-name">
-                                            </div>
-                                            <div class="form-group">
-                                                <label for="message-text" class="col-form-label">Message:</label>
-                                                <textarea class="form-control" id="message-text"></textarea>
-                                            </div>
-                                        </form>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary"
-                                                data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary report">Report</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <div class="review-block">Excellent Auctioneer, quick shipping A++++++</div>
                     </div>
                 </div>
             </div>
         </div>
 
     </div>
-
-<div class="modal fade" id="removeModal" tabindex="-1" role="dialog"
-     aria-labelledby="removeModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="removeModalLabel">Remove Auction </h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form>
-                    <label for="admin-pass" class="col-form-label">Password:</label>
-                    <input type="password" class="form-control" id="admin-pass">
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary"
-                        data-dismiss="modal">Close
-                </button>
-                <button type="button" class="btn btn-danger report">Remove</button>
-            </div>
-        </div>
-    </div>
-</div>
 
 
 </div><!-- end container -->
