--- a/home/landing_page_user.html
+++ b/home/landing_page_user.html
@@ -35,7 +35,7 @@
     <!-- logo -->
     <a href="landing_page_user.html" class="navbar-brand extra-hide">BidBay</a>
     <!-- search bar -->
-    <form action="../search.html" method="get" class="" id="search-bar">
+    <form action="../advanced_search.html" method="get" class="" id="search-bar">
         <div class="d-flex">
             <input class="form-control rounded-1" type="search" placeholder="Search" aria-label="Search"
                    id="search-input">
@@ -82,7 +82,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <!-- carousel items here, change <img> <a> and the subtitle <h3> and <p> with appropriate data -->
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="d-block " src="https://placeimg.com/1600/900/tech" alt="First slide">
                     <div class="carousel-caption d-md-block">
                         <h3>Another Newish Item</h3>
@@ -92,7 +92,7 @@
                 </a>
             </div>
             <div class="carousel-item">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="d-block " src="https://placeimg.com/480/480/arch" alt="Second slide">
                     <div class="carousel-caption d-md-block">
                         <h3>Another Newish Item</h3>
@@ -102,7 +102,7 @@
                 </a>
             </div>
             <div class="carousel-item">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="d-block " src="https://placeimg.com/400/300/arch" alt="Second slide">
                     <div class="carousel-caption d-md-block">
                         <h3>Another Newish Item</h3>
@@ -129,7 +129,7 @@
         <div class="card-columns">
             <!-- reference to auction here -->
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <!-- place auction data here -->
                     <!-- images can be any size -->
                     <img class="card-img-top" src="https://placeimg.com/640/640/tech" alt="auction image">
@@ -145,7 +145,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/960/480/tech" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">Grey Camera</h3>
@@ -158,7 +158,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/480/640/nature" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">Samsung Tablet</h3>
@@ -171,7 +171,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/480/480/arch" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">Pixel X2 4GB</h3>
@@ -184,7 +184,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/480/300/tech" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">toyota motorcycle</h3>
@@ -197,7 +197,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/480/640/arch" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">some other new item</h3>
@@ -219,7 +219,7 @@
         <div class="card-columns">
             <!-- reference to auction here -->
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <!-- place auction data here -->
                     <!-- images can be any size -->
                     <img class="card-img-top" src="https://placeimg.com/640/640/tech" alt="auction image">
@@ -234,7 +234,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/960/480/tech" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">some item</h3>
@@ -247,7 +247,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/480/640/nature" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">some item</h3>
@@ -260,7 +260,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/480/480/arch" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">some item</h3>
@@ -273,7 +273,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/480/300/tech" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">some item</h3>
@@ -286,7 +286,7 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product/product.html">
+                <a href="../auction/auction.html">
                     <img class="card-img-top" src="https://placeimg.com/480/640/arch" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">some item</h3>
