--- a/profile/bannedProfile_asVisitor.html
+++ b/profile/bannedProfile_asVisitor.html
@@ -27,7 +27,7 @@
     <!-- logo -->
     <a href="../home/landing_page.html" class="navbar-brand extra-hide">BidBay</a>
     <!-- search bar -->
-    <form action="../search.html" method="get" class="" id="search-bar">
+    <form action="../advanced_search.html" method="get" class="" id="search-bar">
         <div class="d-flex">
             <input class="form-control rounded-1" type="search" placeholder="Search" aria-label="Search"
                    id="search-input">
