--- a/profile/profile_asAdmin.html
+++ b/profile/profile_asAdmin.html
@@ -27,7 +27,7 @@
     <!-- logo -->
     <a href="../home/landing_page.html" class="navbar-brand extra-hide">BidBay</a>
     <!-- search bar -->
-    <form action="../search.html" method="get" class="" id="search-bar">
+    <form action="../advanced_search.html" method="get" class="" id="search-bar">
         <div class="d-flex">
             <input class="form-control rounded-1" type="search" placeholder="Search" aria-label="Search" id="search-input">
             <label for="search-categories"></label><select class="form-control rounded-1 col-2 " id="search-categories">
@@ -221,7 +221,7 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="../product/product.html">Computer with Keyboard and Mouse</a>
+                                            <a href="../auction/auction.html">Computer with Keyboard and Mouse</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
@@ -242,7 +242,7 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="../product/product.html">Chinese Shoes</a>
+                                            <a href="../auction/auction.html">Chinese Shoes</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
@@ -265,7 +265,7 @@
                                     </div>
                                     <div class="col align-self-center">
                                         <h4>
-                                            <a href="../product/product.html">2º hand car</a>
+                                            <a href="../auction/auction.html">2º hand car</a>
                                         </h4>
                                         <div class="row padding-product-info">
                                             <div class="w-100"></div>
