fix padding; change search nav as user

--- a/sell_page.html
+++ b/sell_page.html
@@ -297,10 +297,10 @@
     </form>
 
     <div class="text-right mb-3 mt-3">
-        <button type="button" class="btn btn-primary">List auction</button>
-        <a type="button" class="btn btn-secondary" href="auction/auction_preview.html">Preview</a>
-        <a type="button" class="btn btn-secondary" href="home/landing_page.html">Save and continue later</a>
-        <a type="button" class="btn btn-danger" href="home/landing_page.html">Cancel</a>
+        <button type="button" class="btn btn-primary sm-mb-3">List auction</button>
+        <a type="button" class="btn btn-secondary sm-mb-3" href="auction/auction_preview.html">Preview</a>
+        <a type="button" class="btn btn-secondary sm-mb-3" href="home/landing_page.html">Save and continue later</a>
+        <a type="button" class="btn btn-danger sm-mb-3" href="home/landing_page.html">Cancel</a>
     </div>
 
 
