fix chat header

--- a/chat.html
+++ b/chat.html
@@ -40,6 +40,9 @@
         <form action="advanced_search.html" method="get" class="" id="search-bar">
             <div class="d-flex">
                 <input class="form-control rounded-1" type="search" placeholder="Search" aria-label="Search"
+                       id="search-input">
+                <select class="form-control rounded-1 col-2 " id="search-categories">
+                    <option selected> All Categories</option>
                     <option>Technology</option>
                     <option>Automobiles</option>
                     <option>Clothes</option>
@@ -48,7 +51,7 @@
             </div>
         </form>
         <!-- authentication links -->
-        <a class="fa-stack fa-3x" id="mail-icon" href="chat.html">
+        <a class="fa-stack fa-3x" id="mail-icon" href="../chat.html">
             <i class="far fa-envelope fa-stack-2x"></i>
             <!-- place numbers of messages here -->
             <strong class="fa-stack-1x calendar-text got-messages mail-icon-number">
