fix broken link

--- a/sell_page.html
+++ b/sell_page.html
@@ -297,7 +297,7 @@
     </form>
 
     <div class="text-right mb-3 mt-3">
-        <button type="button" class="btn btn-primary sm-mb-3">List auction</button>
+        <a type="button" class="btn btn-primary sm-mb-3" href="/auction/auction_asAuctioneer.html">List auction</a>
         <a type="button" class="btn btn-secondary sm-mb-3" href="auction/auction_preview.html">Preview</a>
         <a type="button" class="btn btn-secondary sm-mb-3" href="home/landing_page.html">Save and continue later</a>
         <a type="button" class="btn btn-danger sm-mb-3" href="home/landing_page.html">Cancel</a>
